--- a/landing/index.html
+++ b/landing/index.html
@@ -35,8 +35,8 @@
     <main>
         <section class="py-20">
             <div class="container mx-auto px-4 text-center">
-                <h1 class="text-4xl md:text-5xl font-bold mb-6">Transform Your Business with Custom Software</h1>
-                <p class="text-xl mb-8">We build powerful, tailored solutions that drive growth and efficiency for enterprises</p>
+                <h1 class="text-4xl md:text-5xl font-bold mb-6">Build Software that you trust will meet your Needs</h1>
+                <p class="text-xl mb-8">We help your improve your business effiiency by building powerful,custom enterprise software.</p>
                 <a href="#contact" class="bg-primary text-white px-6 py-3 rounded-lg text-lg hover:bg-opacity-90 transition-colors">Discuss Your Project</a>
             </div>
         </section>
@@ -86,7 +86,7 @@
                     <div class="bg-white p-6 rounded-lg border border-gray-200 hover:shadow-lg transition-shadow">
                         <h3 class="text-xl font-semibold mb-3 text-primary">Herbie AI</h3>
                         <p class="text-gray-800 mb-4">Making Pentesting Easier and Smarter using AI</p>
-                        <a href="https://gtahidi.ai" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline">View Project →</a>
+                        <a href="https://herbie.dev" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline">View Project →</a>
                     </div>
                 </div>
             </div>
@@ -105,17 +105,17 @@
 
         <section class="py-20">
             <div class="container mx-auto px-4">
-                <h2 class="text-3xl font-bold text-center mb-12">Meet Our Founders</h2>
+                <h2 class="text-3xl font-bold text-center mb-12">Hacking and building our way to the top 🛠️</h2>
                 <div class="flex justify-center space-x-12">
                     <div class="text-center">
                         <img src="/api/placeholder/150/150" alt="Founder 1" class="w-32 h-32 rounded-full mx-auto mb-4">
-                        <h3 class="text-xl font-semibold">Founder Name 1</h3>
-                        <p class="text-gray-800">Co-founder & CEO</p>
+                        <h3 class="text-xl font-semibold">Emily Kareji</h3>
+                        <p class="text-gray-800">Founding Engineer/p>
                     </div>
                     <div class="text-center">
                         <img src="/api/placeholder/150/150" alt="Founder 2" class="w-32 h-32 rounded-full mx-auto mb-4">
-                        <h3 class="text-xl font-semibold">Founder Name 2</h3>
-                        <p class="text-gray-800">Co-founder & CTO</p>
+                        <h3 class="text-xl font-semibold">Daniel Omusula</h3>
+                        <p class="text-gray-800">Founding Engineer</p>
                     </div>
                 </div>
             </div>
