--- a/landing/index.html
+++ b/landing/index.html
@@ -109,11 +109,11 @@
                 <div class="flex justify-center space-x-12">
                     <div class="text-center">
                         <img src="/api/placeholder/150/150" alt="Founder 1" class="w-32 h-32 rounded-full mx-auto mb-4">
-                        <h3 class="text-xl font-semibold">Emily Kareji</h3>
+                        <h3 class="text-xl font-semibold">Brian Okechi</h3>
                         <p class="text-gray-800">Founding Engineer/p>
                     </div>
                     <div class="text-center">
-                        <img src="/api/placeholder/150/150" alt="Founder 2" class="w-32 h-32 rounded-full mx-auto mb-4">
+                        <img src="/landing/api/api/team_members/wrdicmydeh8tbmq/Profile.jpg" alt="Founder 2" class="w-32 h-32 rounded-full mx-auto mb-4">
                         <h3 class="text-xl font-semibold">Daniel Omusula</h3>
                         <p class="text-gray-800">Founding Engineer</p>
                     </div>
