added service links

--- a/landing/index.html
+++ b/landing/index.html
@@ -26,7 +26,7 @@
                 <div class="space-x-6">
                     <a href="#services" class="text-gray-800 hover:text-primary transition-colors">Services</a>
                     <a href="#projects" class="text-gray-800 hover:text-primary transition-colors">Projects</a>
-                    <a href="#contact" class="bg-primary text-white px-4 py-2 rounded hover:bg-opacity-90 transition-colors">Let's Talk</a>
+                    <a href="https://cal.com/daniel-omusula" class="bg-primary text-white px-4 py-2 rounded hover:bg-opacity-90 transition-colors">Let's Talk</a>
                 </div>
             </nav>
         </div>
@@ -97,7 +97,7 @@
         <section id="contact" class="py-20">
             <div class="container mx-auto px-4 text-center">
                 <h2 class="text-3xl font-bold mb-8">Let's Discuss Your Project</h2>
-                <a href="#" class="bg-primary text-white px-6 py-3 rounded-lg text-lg hover:bg-opacity-90 transition-colors">Talk to Us</a>
+                <a href="https://cal.com/daniel-omusula" class="bg-primary text-white px-6 py-3 rounded-lg text-lg hover:bg-opacity-90 transition-colors">Talk to Us</a>
             </div>
         </section>
 
