--- a/landing/index.html
+++ b/landing/index.html
@@ -86,7 +86,7 @@
                     <div class="bg-white p-6 rounded-lg border border-gray-200 hover:shadow-lg transition-shadow">
                         <h3 class="text-xl font-semibold mb-3 text-primary">Herbie AI</h3>
                         <p class="text-gray-800 mb-4">Making Pentesting Easier and Smarter using AI</p>
-                        <a href="https://herbie.dev" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline">View Project →</a>
+                        <a href="waitlist.html" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline">View Project →</a>
                     </div>
                 </div>
             </div>
@@ -161,7 +161,7 @@
                 </div>
             </div>
             <div class="mt-8 text-center">
-                <p>Made with ❤️ in Kenya</p>
+                <p>Made with ❤️ by Ujaotech</p>
             </div>
         </div>
     </footer>
