added marketing page

--- a/landing/index.html
+++ b/landing/index.html
@@ -88,6 +88,12 @@
                         <p class="text-gray-800 mb-4">Making Pentesting Easier and Smarter using AI</p>
                         <a href="waitlist.html" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline">View Project →</a>
                     </div>
+                    <div class="bg-white p-6 rounded-lg border border-gray-200 hover:shadow-lg transition-shadow">
+                        <h3 class="text-xl font-semibold mb-3 text-primary">Marketing</h3>
+                        <p class="text-gray-800 mb-4">Transform Your Brand’s Digital Presence with Expert Marketing Strategies.</p>
+                        <a href="https://EKO.ujaotech.com" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline">View Project →</a>
+                    </div>
+                    
                 </div>
             </div>
         </section>
@@ -126,9 +132,9 @@
                 <h2 class="text-3xl font-bold text-center mb-12">Hacking and building our way to the top 🛠️</h2>
                 <div class="flex justify-center space-x-12">
                     <div class="text-center">
-                        <img src="/api/placeholder/150/150" alt="Founder 1" class="w-32 h-32 rounded-full mx-auto mb-4">
+                        <img src="/landing/api/api/team_members/wrdicmydeh8tbmq/Brian Okechi.jpg" alt="Founder 1" class="w-32 h-32 rounded-full mx-auto mb-4">
                         <h3 class="text-xl font-semibold">Brian Okechi</h3>
-                        <p class="text-gray-800">Founding Engineer/p>
+                        <p class="text-gray-800">Founding Engineer</p>
                     </div>
                     <div class="text-center">
                         <img src="/landing/api/api/team_members/wrdicmydeh8tbmq/Profile.jpg" alt="Founder 2" class="w-32 h-32 rounded-full mx-auto mb-4">
